test/errors/err-useundefined.tpg
generator		-- Import Statements
declarations	-- General Declarations
operators		-- Operators (our Node Kinds)
	CONST, CONST1
rules			-- Production Rules
	test = CONST (CONST1 (test) , test) : 1 .
end
